--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
         <br>
         <input type="number" min="0" max="10000" name="numberofmeteors" id="numberofmeteors">
         <br>
+        <label for="spacecolor">Space color</label>
+        <br>
+        <input type="color" name="spacecolor" id="spacecolor">
+        <br>
 
         <button type="submit">Submit</button>
     </form>
