Added setting for meteor speed, fixed number parsing

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,14 @@
         <br>
         <input type="number" min="0" max="10000" name="numberofmeteors" id="numberofmeteors">
         <br>
+        <label for="meteorspeed">Meteor speed</label>
+        <br>
+        <input type="number" min="0" max="100" name="meteorspeed" id="meteorspeed">
+        <br>
         <label for="spacecolor">Space color</label>
         <br>
         <input type="color" name="spacecolor" id="spacecolor">
         <br>
-
         <button type="submit">Submit</button>
     </form>
 </div>
