Changed button label

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <br>
         <input type="color" name="spacecolor" id="spacecolor">
         <br>
-        <button type="submit">Submit</button>
+        <button type="submit">Save</button>
     </form>
 </div>
 </body>
